@@ -34,6 +34,7 @@ getJavaSpecificOpts() {
           -XX:+AggressiveOpts \
           --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED \
           --add-exports=java.base/sun.nio.ch=ALL-UNNAMED \
+          --add-exports=java.base/jdk.internal.loader=ALL-UNNAMED \
           --add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED \
           --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED \
           --add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED \
@@ -45,6 +46,7 @@ getJavaSpecificOpts() {
       value="\
           --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED \
           --add-exports=java.base/sun.nio.ch=ALL-UNNAMED \
+          --add-exports=java.base/jdk.internal.loader=ALL-UNNAMED \
           --add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED \
           --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED \
           --add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED \
@@ -55,6 +57,7 @@ getJavaSpecificOpts() {
   elif [ "${version}" -ge 14 ] && [ "${version}" -lt 15 ]; then
         value="\
             --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED \
+            --add-exports=java.base/jdk.internal.loader=ALL-UNNAMED \
             --add-exports=java.base/sun.nio.ch=ALL-UNNAMED \
             --add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED \
             --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED \
@@ -67,14 +70,17 @@ getJavaSpecificOpts() {
   elif [ "${version}" -ge 15 ] ; then
       value="\
           --add-opens=java.base/jdk.internal.access=ALL-UNNAMED \
+          --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED \
           --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED \
           --add-opens=java.base/sun.nio.ch=ALL-UNNAMED \
+          --add-opens=java.base/sun.util.calendar=ALL-UNNAME \
           --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED \
           --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED \
           --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED \
           --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED \
           --add-opens=java.base/java.io=ALL-UNNAMED \
           --add-opens=java.base/java.nio=ALL-UNNAMED \
+          --add-opens=java.base/java.net=ALL-UNNAMED \
           --add-opens=java.base/java.util=ALL-UNNAMED \
           --add-opens=java.base/java.util.concurrent=ALL-UNNAMED \
           --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED \
